--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>compozerr</title>
-        <link rel="icon" type="image/png" href="public/favicon.ico" />
+        <link rel="icon" type="image/png" href="assets/favicon.ico" />
         <script src="https://cdn.tailwindcss.com"></script>
         <style type="text/tailwindcss">
             html {
