Unset border color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,10 @@
             html {
                 color-scheme: light dark;
             }
+
+            * {
+                border-color: unset;
+            }
         </style>
     </head>
 
