--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
             }
 
             * {
-                border-color: unset;
+                border-color: hsl(var(--border));
             }
         </style>
     </head>
