Updated more packages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,14 @@
             html {
                 color-scheme: light dark;
             }
+
+            * {
+                border-color: hsl(var(--border));
+            }
+            body {
+                background-color: hsl(var(--background));
+                color: hsl(var(--foreground));
+            }
         </style>
     </head>
 
