Removed light color-scheme

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <style type="text/tailwindcss">
             html {
-                color-scheme: light dark;
+                color-scheme: dark;
             }
 
             * {
